fix overflow issue

--- a/Styles/style_home.css
+++ b/Styles/style_home.css
@@ -74,6 +74,10 @@
 	.page .heading-header-text {
 		font-size: 1.3rem;
 	}
+
+	.page .body-content-text {
+		font-size: 1rem;
+	}
 }
 
 
